# python-fluctmatch

./: .bumpversion.cfg  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CODE_OF_CONDUCT.md  MANIFEST.in  Makefile  README.rst  appveyor.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
ci/: appveyor-bootstrap.py  appveyor-download.py  bootstrap.py
docs/: conf.py
src/fluctmatch/: __init__.py  __main__.py  cli.py
src/fluctmatch/analysis/: __init__.py  entropy.py  fluctsca.py  ica.py  paramstats.py  paramtable.py  thermodynamics.py
src/fluctmatch/commands/: __init__.py  cmd_convert.py  cmd_diff.py  cmd_entropy.py  cmd_framediff.py  cmd_normdiff.py  cmd_run_fm.py  cmd_sca.py  cmd_splittraj.py  cmd_stats.py  cmd_table.py  cmd_table_convert.py  cmd_thermo.py  cmd_wordom.py  cmd_write_charmm.py  cmd_write_rtf.py
src/fluctmatch/coordinates/: COR.py  __init__.py
src/fluctmatch/core/: __init__.py  base.py  selection.py  utils.py
src/fluctmatch/decomposition/: __init__.py  eigh.py  ica.py  ipca.py  svd.py
src/fluctmatch/fluctmatch/: __init__.py  base.py  utils.py  (+1 more)
tests/: datafiles.py  test_fluctmatch.py
tests/coordinates/: test_cor.py
tests/data/: cg.cor  cg.rtf  cg.stream  cg.xplor.psf  fluct.ic  fluctmatch.par  trex2.gro
tests/decomposition/: __init__.py  test_eigh.py  test_svd.py
tests/fluctmatch/: __init__.py  test_charmminit.py  test_utils.py
tests/intcor/: __init__.py  test_ic.py  test_utils.py
tests/io/: test_cor.py  test_ic.py  test_prm.py  test_psf.py  test_rtf.py  test_str.py
tests/libs/: test_intcor.py
tests/models/: __init__.py  test_atomselection.py  test_core.py  test_enm.py  test_generic.py  test_ions.py  test_nucleic.py  test_protein.py  test_solvent.py  test_united.py  test_universe.py  test_utils.py
tests/parameter/: test_prm.py
tests/parsers/: test_cor.py  test_ic.py  test_par.py  test_prm.py  test_psf.py  test_rtf.py  test_str.py
tests/topology/: __init__.py  test_cor.py  test_psf.py  test_rtf.py  test_str.py
(+86 files in other folders)
