[build-system]
requires = [
    "setuptools >= 40.0.4",
    "setuptools_scm >= 2.0.0, <4",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.towncrier]
    package = "tox"
    filename = "docs/changelog.rst"
    directory = "docs/changelog"
    template = "docs/changelog/template.jinja2"
    title_format = "v{version} ({project_date})"
    issue_format = "`#{issue} <https://github.com/tox-dev/tox/issues/{issue}>`_"
    underlines = ["-", "^"]

    [[tool.towncrier.section]]
        path = ""

    [[tool.towncrier.type]]
        directory = "bugfix"
        name = "Bugfixes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "feature"
        name = "Features"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "deprecation"
        name = "Deprecations (removal in next major release)"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "breaking"
        name = "Backward incompatible changes"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "doc"
        name = "Documentation"
        showcontent = true

    [[tool.towncrier.type]]
        directory = "misc"
        name = "Miscellaneous"
        showcontent = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
